syntax = "proto3";
package event;
option go_package = "/event_service";
import "google/api/annotations.proto";

message Event {
    int64 id = 1; 
    string name = 2; 
    string date = 3; 
    string expiry = 4; 
    string description = 5; 
    int64 user_id = 6; 
}

message CreateEventRequest {
    Event event = 1; 
    int32 n_day_alarm = 2; 
}

message CreateEventResponse {
    int64 id = 1; 
}

message UpdateEventRequest {
    Event event = 1; 
}

message UpdateEventResponse {
    bool success = 1; 
}

message DeleteEventRequest {
    bool success = 1; 
}

message DeleteEventResponse {
    bool success = 1; 
}

message GetEventsRequest {
    string date = 1; 
    int32 page = 2; 
    int32 size = 3; 
}

message GetEventsResponse {
    repeated Event events = 1; 
}

service EventService {
    rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
        option (google.api.http) = {
            post: "/events"
            body: "event"
        };
    }
    
    rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
        option (google.api.http) = {
            patch: "/events"
            body: "event"
        };
    }
    
    rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {
        option (google.api.http) = {
            delete: "/events/{id}"
        };
    }
    
    rpc GetEventsDay(GetEventsRequest) returns (GetEventsResponse) {
        option (google.api.http) = {
            get: "/events"
        };
    }

    rpc GetEventsWeek(GetEventsRequest) returns (GetEventsResponse) {
        option (google.api.http) = {
            get: "/events"
        };
    }

    rpc GetEventsMonth(GetEventsRequest) returns (GetEventsResponse) {
        option (google.api.http) = {
            get: "/events"
        };
    }

}